Fixed the script error

--- a/manifest.json
+++ b/manifest.json
@@ -45,5 +45,11 @@
     "32": "icons/icon32.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
-  }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["content-cached.js"],
+      "matches": ["https://*.aliexpress.com/*", "https://*.aliexpress.us/*"]
+    }
+  ]
 }
